mysql-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service_name: mysql
    spec:
      containers:
        - name: mysql
          image: mariadb
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          hostPath:
            path: /var/lib/mediawiki-containers/mysql
