db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    service_name: mysql

# END MySQL
