wiki.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mediawiki-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service_name: mediawiki
    spec:
      containers:
        - name: mediawiki
          #image: devyanial07/mediawiki
          image: wikimedia/mediawiki:1.30.0-wmf4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: mediawiki-storage
              mountPath: /data
            - name: mediawiki-conf
              mountPath: /conf

      volumes:
        - name: mediawiki-storage
          hostPath:
            path: /var/lib/mediawiki-containers/mediawiki
        - name: mediawiki-conf
          configMap:
            name: mediawiki-conf-1

---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service_name: mediawiki
