ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mediawiki-ingress
  annotations:

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mediawiki-svc
          servicePort: 8080
